--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 				text-shadow: 1px 1px 10px #000;
 			}
 
+			.reveal .text-left {
+				text-align: left;
+			}
 		</style>
 	</head>
 	<body>
@@ -883,15 +886,19 @@
 					<h3>Перевод ETH</h3>
 					<pre>
 						<code class="language-php" data-trim data-noescape
-							  data-line-numbers="|3,7|4,12|10|6-15">
+							  data-line-numbers="|3-7|9,17|15|11-20">
 							use Web3p\EthereumTx\Transaction;
 
-							$nonce = $nodeClient->call('eth_getTransactionCount', [$fromAddress, "pending"]);
+							$nonceResult = $nodeClient->call(
+								"eth_getTransactionCount", [$walletAddress, "pending"]
+							);
+							$nonce = hexdec($nonceResult->getResult());
+
 							$amountInHex = dechex((int)'1000000000000000000'); // 1 ETH
 
 							$transaction = new Transaction([
 								'nonce' => $nonce,
-								'from' => $addressFrom,
+								'from' => $walletAddress,
 								'to' => $addressTo,
 								'gas' => '0x' . self::ETHEREUM_GAS_LIMIT, // 210000
 								'gasPrice' => $gasPrice,
@@ -903,13 +910,126 @@
 					</pre>
 				</section>
 				<section>
+					<pre>
+						<code class="language-php" data-trim data-noescape
+							  data-line-numbers="|1-5|7-9">
+							$balanceResponse = $nodeClient->call(
+								"eth_getBalance", [$walletAddress, "latest"]
+							);
+							$rawBalance = hexdec($balanceResponse->getResult()); // balance in Wei
+							$balance = new Money($rawBalance, new Currency('ETH'));
+
+							if ($balance->lessThan($requestedAmount)) {
+								throw new NotEnoughBalanceException($walletAddress, $balance);
+							}
+						</code>
+					</pre>
+				</section>
+				<section>
+					<h3>Перевод ERC-20 токена</h3>
+					<pre>
+						<code class="language-php" data-trim data-noescape>
+							use Web3p\EthereumTx\Transaction;
+
+							$nonceResult = $nodeClient->call(
+								"eth_getTransactionCount", [$walletAddress, "pending"]
+							);
+							$nonce = hexdec($nonceResult->getResult());
+
+							// Check token balance ???
+						</code>
+					</pre>
+				</section>
+				<section>
+					<h2>ERC-20</h2>
+					<pre>
+						<code class="language-js" data-trim data-noescape style="font-size: 0.85em"
+							  data-line-numbers="|5,6">
+							function name() public view returns (string)
+							function symbol() public view returns (string)
+							function decimals() public view returns (uint8)
+							function totalSupply() public view returns (uint256)
+							function balanceOf(address _owner) public view returns (uint256 balance)
+							function transfer(address _to, uint256 _value) public returns (bool success)
+							function transferFrom(address _from, address _to, uint256 _value) public returns (bool success)
+							function approve(address _spender, uint256 _value) public returns (bool success)
+							function allowance(address _owner, address _spender) public view returns (uint256 remaining)
+						</code>
+					</pre>
+				</section>
+				<section>
+					<h3>Application Binary Interface (ABI)</h3>
+					<pre>
+						<code class="language-json" data-trim data-noescape>
+							{
+								"type": "function",
+								"name": "balanceOf",
+								"inputs": [
+									{"name": "_owner", "type": "address"}
+								],
+								"outputs": [
+									{"name": "balance", "type": "uint256"}
+								],
+								"payable": false
+							}
+					</code>
+					</pre>
+					<pre>
+						<code class="language-json" data-trim data-noescape>
+						{
+							"type": "function",
+							"name": "transfer",
+							"inputs": [
+								{"name": "_to", "type": "address"},
+								{"name": "_value", "type": "uint256"}
+							],
+							"outputs": [],
+							"payable": false
+						}
+						</code>
+					</pre>
+				</section>
+				<section>
+					<img src="images/erc-20-abi.png" alt="">
+					<a class="explorer-link" href="https://etherscan.io/token/0xdac17f958d2ee523a2206206994597c13d831ec7#code">https://etherscan.io/token/0xdac17f958d2ee523a2206206994597c13d831ec7#code</a>
+				</section>
+				<section>
+					<p>composer require web3p/web3.php</p>
+				</section>
+				<section>
+					<h2>ERC-20: balanceOf</h2>
+					<pre>
+						<code class="language-php" data-trim data-noescape
+							  data-line-numbers="|1,2|3,5-6|7-14">
+							$erc20AbiJson = '...';
+							$ethAbi = new \Web3\Contract('https://eth.public-rpc.com', $erc20AbiJson);
+							$usdtContractAddress = '0xdac17f958d2ee523a2206206994597c13d831ec7';
+
+							$ethAbi
+								->at($usdtContractAddress)
+								->call(
+									"balanceOf",
+									$walletAddress,
+									function($err, array $res) use (&$balance) {
+										/** @var BigInteger $balanceRaw */
+										$balanceRaw = $res[0]; // in decimals
+										$balance = new Money($balanceRaw->toString(), new Currency('USDT'));
+									}
+								);
+						</code>
+					</pre>
+				</section>
+				<section>
+					<img src="images/usdt-balance-of.png" alt="">
+					<a class="explorer-link"
+					   href="https://etherscan.io/token/0xdac17f958d2ee523a2206206994597c13d831ec7#readContract">https://etherscan.io/token/0xdac17f958d2ee523a2206206994597c13d831ec7#readContract</a>
+				</section>
+				<section>
 					<h3>Перевод ERC-20 токена</h3>
 					<pre>
 						<code class="language-php" data-trim data-noescape
-							  data-line-numbers="|4,13|16|14|8,17">
-							use Web3p\EthereumTx\Transaction;
+							  data-line-numbers="|1,10|13|11|5,14">
 
-							$nonce = $nodeClient->call('eth_getTransactionCount', [$fromAddress, "pending"]);
 							$smartContractAddress = '0xdac17f958d2ee523a2206206994597c13d831ec7'; // USDT
 
 							// ...
@@ -918,7 +1038,7 @@
 
 							$transaction = new Transaction([
 								'nonce' => $nonce,
-								'from' => $addressFrom,
+								'from' => $walletAddress,
 								'to' => $smartContractAddress,
 								'gas' => self::TOKEN_TRANSFER_GAS_LIMIT, // 150000-300000
 								'gasPrice' => $gasPrice,
@@ -931,7 +1051,7 @@
 					</pre>
 				</section>
 				<section>
-					<h5 style="text-align: left">Contract:</h5>
+					<h5 class="text-left">Contract:</h5>
 					<pre>
 						<code class="language-js" data-trim data-noescape>
 							function transfer(address _to, uint256 amount) public {
@@ -939,64 +1059,16 @@
 							}
 						</code>
 					</pre>
-					<h5 style="text-align: left" class="fragment" data-fragment-index="1">PHP:</h5>
+					<h5 class="fragment text-left" data-fragment-index="1">PHP:</h5>
 					<pre class="fragment" data-fragment-index="1">
-						<code class="language-php" data-trim data-noescape
-							  data-line-numbers="1-3|5-7|9-11">
-							$methodHash = \kornrunner\Keccak::hash('transfer(address,uint256)', 256);
-							$methodId = '0x' . substr($methodHash, 0, 8);
-							// 0xa9059cbb
-
-							$destAddress = '0x5d0c1c863c637327da8966241ebd6b2f5c4f6945';
-							$addressTo = str_pad(substr($destAddress, 2), 64, '0', STR_PAD_LEFT);
-							// 0000000000000000000000005d0c1c863c637327da8966241ebd6b2f5c4f6945
-
-							$valueInHex = dechex((int)'250000000'); // 250 USDT
-							$value = str_pad($valueInHex, 64, '0', STR_PAD_LEFT);
-							// 000000000000000000000000000000000000000000000000000000000ee6b280
-						</code>
-					</pre>
-				</section>
-				<section>
-					<pre>
-						<code class="language-php" data-trim data-noescape>
-							$methodHash = \kornrunner\Keccak::hash('transfer(address,uint256)', 256);
-							$methodId = '0x' . substr($methodHash, 0, 8);
-							// 0xa9059cbb
-
-							$destAddress = '0x5d0c1c863c637327da8966241ebd6b2f5c4f6945';
-							$addressTo = str_pad(substr($destAddress, 2), 64, '0', STR_PAD_LEFT);
-							// 0000000000000000000000005d0c1c863c637327da8966241ebd6b2f5c4f6945
-
-							$valueInHex = dechex((int)'250000000'); // 250 USDT
-							$value = str_pad($valueInHex, 64, '0', STR_PAD_LEFT);
-							// 000000000000000000000000000000000000000000000000000000000ee6b280
-						</code>
-					</pre>
-					<div class="r-stack">
-						<img class="fragment" data-fragment-index="4" src="images/erc20-data-formatted.png" alt="">
-						<img class="fragment" data-fragment-index="5" src="images/erc20-data-raw.png" alt="">
-					</div>
-					<a class="fragment explorer-link" data-fragment-index="4"
-					   href="https://etherscan.io/tx/0xa16691f915acd67ec0139576f5bcdcd3d0fb573f31566ca0ff6aab128c35f314">https://etherscan.io/tx/0xa16691f915acd67ec0139576f5bcdcd3d0fb573f31566ca0ff6aab128c35f314</a>
-				</section>
-				<section>
-					<pre>
-						<code class="language-php" data-trim data-noescape
-							  data-line-numbers="7,16|">
-							use Web3p\EthereumTx\Transaction;
-
-							$nonce = $nodeClient->call('eth_getTransactionCount', [$fromAddress, "pending"]);
-
-							// ...
-
-							$data = '0x' . $methodId . $addressTo . $value;
+						<code class="language-php" data-trim data-noescape data-line-numbers="|1,10">
+							$data = '0x' . $ethAbi->getData('transfer', $addressTo, $amount);
 
 							$transaction = new Transaction([
 								'nonce' => $nonce,
-								'from' => $addressFrom,
+								'from' => $walletAddress,
 								'to' => $smartContractAddress,
-								'gas' => '0x' . self::TOKEN_TRANSFER_GAS_LIMIT, // 150000-300000
+								'gas' => self::TOKEN_TRANSFER_GAS_LIMIT, // 150000-300000
 								'gasPrice' => $gasPrice,
 								'value' => '0x0',
 								'data' => $data
@@ -1007,95 +1079,24 @@
 					</pre>
 				</section>
 				<section>
-					<h2>ERC-20 ABI</h2>
 					<pre>
-						<code class="language-json" data-trim data-noescape>
-							{
-								"name": "transfer",
-								"constant": false,
-								"inputs": [
-									{
-										"name": "_to",
-										"type": "address"
-									},
-									{
-										"name": "_value",
-										"type": "uint256"
-									}
-								],
-								"outputs": [],
-								"payable": false,
-								"stateMutability": "nonpayable",
-								"type": "function"
-							}
-						</code>
-					</pre>
-				</section>
-				<section>
-					<h2>Pancake Swap</h2>
-					<ol>
-						<li>Адрес контракта</li>
-						<li>ABI контракта</li>
-						<li>Сигнатура метода</li>
-					</ol>
-				</section>
-				<section>
-					<h2>PancakeRouter ABI</h2>
-					<img src="images/pancake-router-abi-2.png" alt="">
-					<a class="explorer-link"
-					   href="https://etherscan.io/address/0xeff92a263d31888d860bd50809a8d171709b7b1c">https://etherscan.io/address/0xeff92a263d31888d860bd50809a8d171709b7b1c</a>
-				</section>
-				<section>
-					<p>composer require web3p/web3.php</p>
-				</section>
-				<section>
-					<pre>
-						<code class="language-js" data-trim data-noescape>
-							function swapTokensForExactTokens(
-								uint256 amountOut,
-								uint256 amountInMax,
-								address[] path,
-								address to)
-							external payable returns (uint256 amountIn);
-						</code>
-					</pre>
-				</section>
-				<section>
-					<h5 style="text-align: left">Contract:</h5>
-					<pre>
-						<code class="language-js" data-trim data-noescape>
-							function getAmountsIn(
-								uint amountOut,
-								address[] memory path)
-							internal view returns (uint[] memory amounts);
-						</code>
-					</pre>
+						<code class="language-php" data-trim data-noescape>
+							// Transfer 250 USDT to 0x5d0c1c863c637327da8966241ebd6b2f5c4f6945
 
-				</section>
-				<section>
-					<pre>
-						<code class="language-json" data-trim data-noescape>
-						{
-							"inputs": [
-								{"internalType": "uint256", "name": "amountOut", "type": "uint256"},
-								{"internalType": "uint256", "name": "amountInMax", "type": "uint256"},
-								{"internalType": "address[]", "name": "path", "type": "address[]"},
-								{"internalType": "address", "name": "to", "type": "address"},
-								{"internalType": "uint256", "name": "deadline", "type": "uint256"}
-							],
-							"name": "swapTokensForExactTokens",
-							"outputs": [
-								{
-									"internalType": "uint256[]",
-									"name": "amounts",
-									"type": "uint256[]"
-								}
-							],
-							"stateMutability": "nonpayable",
-							"type": "function"
-						}
+							$data = '0x' . $ethAbi->getData(
+								'transfer', '0x5d0c1c863c637327da8966241ebd6b2f5c4f6945', '250000000'
+							);
+
+							// 0xa9059cbb0000000000000000000000005d0c1c863c637327da8966241ebd6b2f5c4f
+							// 6945000000000000000000000000000000000000000000000000000000000ee6b280
 						</code>
 					</pre>
+					<div class="r-stack">
+						<img class="fragment" data-fragment-index="1" src="images/erc20-data-raw.png" alt="">
+						<img class="fragment" style="width: 101%" data-fragment-index="2" src="images/erc20-data-formatted.png" alt="">
+					</div>
+					<a class="fragment explorer-link" data-fragment-index="1"
+					   href="https://etherscan.io/tx/0xa16691f915acd67ec0139576f5bcdcd3d0fb573f31566ca0ff6aab128c35f314">https://etherscan.io/tx/0xa16691f915acd67ec0139576f5bcdcd3d0fb573f31566ca0ff6aab128c35f314</a>
 				</section>
 				<section>
 					<img src="images/graves.jpg" alt="">
@@ -1103,11 +1104,13 @@
 				<section>
 					<h3><s>Кладбище</s> Список библиотек</h3>
 					<ul style="width: 104%">
+						<li><a href="https://github.com/web3p/ethereum-tx">web3p/ethereum-tx</a> 2 года назад</li>
 						<li><a href="https://github.com/digitaldonkey/ethereum-php">Ethereum-PHP</a> 3 года назад</li>
 						<li><a href="https://github.com/iexbase/tron-api">Tron API</a> 2 года назад</li>
-						<li><a href="https://github.com/foxrp/rippled-php 6">Rippled PHP</a> лет назад</li>
-						<li><a href="https://github.com/zulucrypto/stellar-api">Stellar API</a>  6 лет назад</li>
+						<li><a href="https://github.com/foxrp/rippled-php">Rippled PHP</a> 6 лет назад</li>
+						<li><a href="https://github.com/zulucrypto/stellar-api">Stellar API</a> 6 лет назад</li>
 						<li><a href="https://github.com/murich/php-cryptocurrency-address-validation">php cryptocurrency address validation</a> 7 лет назад</li>
+						<li><a href="https://github.com/kornrunner/php-keccak">php-keccak</a>3 года назад</li>
 					</ul>
 				</section>
 			</div>
