--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 				</section>
 				<section>
 					<h2>Money</h2>
-					<img src="images/money.jpg" alt="" style="width: 80%">
+					<img src="images/money-pepe.jpg" alt="" style="width: 80%">
 				</section>
 				<section>
 					<img src="images/money-libs.png" alt="">
@@ -1112,6 +1112,10 @@
 						<li><a href="https://github.com/murich/php-cryptocurrency-address-validation">php cryptocurrency address validation</a> 7 лет назад</li>
 						<li><a href="https://github.com/kornrunner/php-keccak">php-keccak</a>3 года назад</li>
 					</ul>
+				</section>
+				<section>
+					<h2>Спасибо</h2>
+					<img src="images/fear-and-loathing.jpg" alt="">
 				</section>
 			</div>
 		</div>
